# palautusrepositorio

./: README.md
osa2/git-treeni/: erotus.py  index.py  summa.py
osa2/nhl-statistics-1/: mock_test.py
osa2/nhl-statistics-1/src/: index.py  player_reader.py  statistics_service.py
osa2/poetry-web/: pyproject.toml
osa2/project-reader/: pyproject.toml
osa2/project-reader/src/: index.py  project_reader.py
osa3/hello-robot/: log.html  output.xml  report.html
osa3/hello-robot/src/tests/: increase_counter.robot
osa3/login-robot/: log.html  output.xml  report.html
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa4/: retro.md
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
osa5/tennis/src/: tennis_game.py
