[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["lehtio <laura.l.lehtio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
